@@ -5,10 +5,12 @@ import java.net.URI;
 import java.util.Collections;
 import java.util.List;
 import nl.ramsolutions.sw.definitions.SwModuleScanner;
+import nl.ramsolutions.sw.magik.Location;
 import nl.ramsolutions.sw.magik.analysis.helpers.ArgumentsNodeHelper;
 import nl.ramsolutions.sw.magik.analysis.helpers.ProcedureInvocationNodeHelper;
 import nl.ramsolutions.sw.magik.analysis.typing.types.TypeString;
 import nl.ramsolutions.sw.magik.api.MagikGrammar;
+import nl.ramsolutions.sw.magik.parser.MagikCommentExtractor;
 
 /**
  * {@code def_enumeration_from}/{@code def_enumeration} parser.
@@ -19,6 +21,8 @@ public class DefEnumerationParser extends TypeDefParser {
     private static final String DEF_ENUMERATION = "def_enumeration";
     private static final String SW_DEF_ENUMERATION_FROM = "sw:def_enumeration_from";
     private static final String SW_DEF_ENUMERATION = "sw:def_enumeration";
+    private static final List<TypeString> ENUM_PARENTS = List.of(
+        TypeString.ofIdentifier("enumeration_value", "sw"));
 
     /**
      * Constructor.
@@ -59,15 +63,18 @@ public class DefEnumerationParser extends TypeDefParser {
      */
     @Override
     public List<Definition> parseDefinitions() {
-        final AstNode argumentsNode = node.getFirstChild(MagikGrammar.ARGUMENTS);
+        final AstNode argumentsNode = this.node.getFirstChild(MagikGrammar.ARGUMENTS);
         final ArgumentsNodeHelper argumentsHelper = new ArgumentsNodeHelper(argumentsNode);
         final AstNode argument0Node = argumentsHelper.getArgument(0, MagikGrammar.SYMBOL);
         if (argument0Node == null) {
             throw new IllegalStateException();
         }
 
-        // Figure module name.
+        // Figure location.
         final URI uri = this.node.getToken().getURI();
+        final Location location = new Location(uri, this.node);
+
+        // Figure module name.
         final String moduleName = SwModuleScanner.getModuleName(uri);
 
         // Figure statement node.
@@ -80,12 +87,21 @@ public class DefEnumerationParser extends TypeDefParser {
         final String identifier = argument0Node.getTokenValue().substring(1);
         final TypeString name = TypeString.ofIdentifier(identifier, pakkage);
 
-        // Figure parents.
-        final List<TypeString> parents = Collections.emptyList();
+        // Figure doc.
+        final AstNode parentNode = this.node.getParent();
+        final String doc  = MagikCommentExtractor.extractDocComment(parentNode);
 
-        final EnumerationDefinition enumerationDefinition =
-            new EnumerationDefinition(moduleName, statementNode, name, parents);
-        return List.of(enumerationDefinition);
+        final ExemplarDefinition definition = new ExemplarDefinition(
+            location,
+            moduleName,
+            statementNode,
+            ExemplarDefinition.Sort.SLOTTED,
+            name,
+            Collections.emptyList(),
+            DefEnumerationParser.ENUM_PARENTS,
+            doc,
+            Collections.emptyList());
+        return List.of(definition);
     }
 
 }
